@@ -1,5 +1,0 @@
-- better search.
-- add cache expiration for individual functions.
-- posters, images?
-- detailed rating?
-- alsoknow() could also parse the "more" url if given
