@@ -2,6 +2,8 @@ v1.0.0
 -------------------
 ! little fix for the MPAA retrieval (thanx to aaron pointing this out and
   providing the fix)
++ added some more checks on valid image and cache directories to prevent
+  PHP warnings/errors
 
 v0.9.5 (03.04.2008)
 -------------------
